agrego un funcion que permite cambiar a modo oscuro

--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-dark>
 
 <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css\dom-ejercicios.css" />
 </head>
 
-<body>
+<body data-dark>
     <header class="header">
         <h1>Ejercicios del DOM</h1>
     </header>
@@ -58,6 +58,7 @@
         </section>
     </main>
     <buttom class="scroll-top-btn hidden">&#11014;</buttom>
+    <button class="dark-theme-btn">🌙</button>
     <script src="index_dom.js" type="module"></script>
 
 </html>
