--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -27,8 +27,8 @@
             <a href="#seccion3">Cuenta Regresiva</a>
             <a href="#seccion4">Responsive con JavaScript</a>
             <a href="#seccion5">Responsive Tester</a>
-            <a href="#seccion6">Seccion 6</a>
-            <a href="#seccion7">Seccion 7</a>
+            <a href="#seccion6">Deteccion de Dispositivos (User Agent)</a>
+            <a href="#seccion7">Detencion de Conexion</a>
             <a href="#seccion8">Seccion 8</a>
             <a href="#seccion9">Seccion 9</a>
             <a href="#seccion10">Seccion 10</a>
@@ -75,10 +75,11 @@
             </form>
         </section>
         <section id="seccion6" class="section">
-            <h2>Seccion 6</h2>
+            <h2>Deteccion de Dispositivos<br>(User Agents)</h2>
+            <div id="user-device"></div>
         </section>
         <section id="seccion7" class="section">
-            <h2>Seccion 7</h2>
+            <h2>Detencion de Conexion</h2>
         </section>
         <section id="seccion8" class="section">
             <h2>Seccion 8</h2>
