--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -28,8 +28,8 @@
             <a href="#seccion4">Responsive con JavaScript</a>
             <a href="#seccion5">Responsive Tester</a>
             <a href="#seccion6">Deteccion de Dispositivos (User Agent)</a>
-            <a href="#seccion7">Detencion de Conexion</a>
-            <a href="#seccion8">Seccion 8</a>
+            <a href="#seccion7">Deteccion de Conexion</a>
+            <a href="#seccion8">Deteccion de la Camara Web</a>
             <a href="#seccion9">Seccion 9</a>
             <a href="#seccion10">Seccion 10</a>
         </nav>
@@ -79,10 +79,11 @@
             <div id="user-device"></div>
         </section>
         <section id="seccion7" class="section">
-            <h2>Detencion de Conexion</h2>
+            <h2>Deteccion de Conexion</h2>
         </section>
         <section id="seccion8" class="section">
-            <h2>Seccion 8</h2>
+            <h2>Deteccion de la Camara Web</h2>
+            <video src="" id="webcam"></video>
         </section>
         <section id="seccion9" class="section">
             <h2>Seccion 9</h2>
