--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -30,7 +30,7 @@
             <a href="#seccion6">Deteccion de Dispositivos (User Agent)</a>
             <a href="#seccion7">Deteccion de Conexion</a>
             <a href="#seccion8">Deteccion de la Camara Web</a>
-            <a href="#seccion9">Seccion 9</a>
+            <a href="#seccion9">Geolocalizacion</a>
             <a href="#seccion10">Seccion 10</a>
         </nav>
     </aside>
@@ -86,7 +86,8 @@
             <video src="" id="webcam"></video>
         </section>
         <section id="seccion9" class="section">
-            <h2>Seccion 9</h2>
+            <h2>Geolocalizacion</h2>
+            <div id="geolocation"></div>
         </section>
         <section id="seccion10" class="section">
             <h2>Seccion 10</h2>
@@ -95,5 +96,7 @@
     <buttom class="scroll-top-btn hidden">&#11014;</buttom>
     <button class="dark-theme-btn">🌙</button>
     <script src="index_dom.js" type="module"></script>
+
+
 
 </html>
