--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -31,7 +31,12 @@
             <a href="#seccion7">Deteccion de Conexion</a>
             <a href="#seccion8">Deteccion de la Camara Web</a>
             <a href="#seccion9">Geolocalizacion</a>
-            <a href="#seccion10">Seccion 10</a>
+            <a href="#seccion10">Filtros de Busquedas</a>
+            <a href="#seccion11">Seccion 11</a>
+            <a href="#seccion12">Seccion 12</a>
+            <a href="#seccion13">Seccion 13</a>
+            <a href="#seccion14">Seccion 14</a>
+            <a href="#seccion15">Seccion 15</a>
         </nav>
     </aside>
     <main>
@@ -90,7 +95,49 @@
             <div id="geolocation"></div>
         </section>
         <section id="seccion10" class="section">
-            <h2>Seccion 10</h2>
+            <h2>Filtros de Busquedas</h2>
+            <input type="search" placeholder="Buscar..." class="card-filter">
+            <article class="cards">
+                <figure class="card">
+                    <img src="https://placeimg.com//200/200/tech" alt="Tech">
+                    <figcaption>Tech</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/animals" alt="Animal">
+                    <figcaption>Animal</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/people" alt="People">
+                    <figcaption>People</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/arch" alt="Arch">
+                    <figcaption>Arch</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/nature" alt="Nature">
+                    <figcaption>Nature</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/any" alt="Any">
+                    <figcaption>Any</figcaption>
+                </figure>
+            </article>
+        </section>
+        <section id="seccion11" class="section">
+            <h2>Seccion 11</h2>
+        </section>
+        <section id="seccion12" class="section">
+            <h2>Seccion 12</h2>
+        </section>
+        <section id="seccion13" class="section">
+            <h2>Seccion 13</h2>
+        </section>
+        <section id="seccion14" class="section">
+            <h2>Seccion 14</h2>
+        </section>
+        <section id="seccion15" class="section">
+            <h2>Seccion 15</h2>
         </section>
     </main>
     <buttom class="scroll-top-btn hidden">&#11014;</buttom>
