agego modulo de de carrusel de imagenes (js/carrusel.js), scroll spy (js/scroll_spy) y un modulo de un soreteo aleatorio (js/sorteo.j

--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -22,25 +22,28 @@
 
     <aside class="panel">
         <nav class="menu">
-            <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
-            <a href="#seccion2">Eventos del Teclado</a>
-            <a href="#seccion3">Cuenta Regresiva</a>
-            <a href="#seccion4">Responsive con JavaScript</a>
-            <a href="#seccion5">Responsive Tester</a>
-            <a href="#seccion6">Deteccion de Dispositivos (User Agent)</a>
-            <a href="#seccion7">Deteccion de Conexion</a>
-            <a href="#seccion8">Deteccion de la Camara Web</a>
-            <a href="#seccion9">Geolocalizacion</a>
-            <a href="#seccion10">Filtros de Busquedas</a>
-            <a href="#seccion11">Seccion 11</a>
-            <a href="#seccion12">Seccion 12</a>
-            <a href="#seccion13">Seccion 13</a>
-            <a href="#seccion14">Seccion 14</a>
-            <a href="#seccion15">Seccion 15</a>
+            <a href="#seccion1" data-scroll-spy>Reloj Digital y Alarma Sonora</a>
+            <a href="#seccion2" data-scroll-spy>Eventos del Teclado</a>
+            <a href="#seccion3" data-scroll-spy>Cuenta Regresiva</a>
+            <a href="#seccion4" data-scroll-spy>Responsive con JavaScript</a>
+            <a href="#seccion5" data-scroll-spy>Responsive Tester</a>
+            <a href="#seccion6" data-scroll-spy>Deteccion de Dispositivos (User Agent)</a>
+            <a href="#seccion7" data-scroll-spy>Deteccion de Conexion</a>
+            <a href="#seccion8" data-scroll-spy>Deteccion de la Camara Web</a>
+            <a href="#seccion9" data-scroll-spy>Geolocalizacion</a>
+            <a href="#seccion10" data-scroll-spy>Filtros de Busquedas</a>
+            <a href="#seccion11" data-scroll-spy>Sorteo Digital</a>
+            <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
+            <a href="#seccion13" data-scroll-spy>Seccion 13</a>
+            <a href="#seccion14" data-scroll-spy>Seccion 14</a>
+            <a href="#seccion15" data-scroll-spy>Seccion 15</a>
+            <a href="#seccion16" data-scroll-spy>Seccion 16</a>
+            <a href="#seccion17" data-scroll-spy>Seccion 17</a>
+            <a href="#seccion18" data-scroll-spy>Seccion 18</a
         </nav>
     </aside>
     <main>
-        <section id="seccion1" class="section">
+        <section id="seccion1" class="section" data-scroll-spy>
             <h2>Reloj Digital y Alarma Sonora</h2>
             <div id="reloj"></div>
             <div>
@@ -50,22 +53,22 @@
                 <button id="desactivar-alarma">Detener Alarma</button>
             </div>
         </section>
-        <section id="seccion2" class="section">
+        <section id="seccion2" class="section" data-scroll-spy>
             <h2>Eventos del Teclado</h2>
             <article class="stage">
                 <div class="ball"></div>
             </article>
         </section>
-        <section id="seccion3" class="section">
+        <section id="seccion3" class="section" data-scroll-spy>
             <h2>Cuenta Regresiva</h2>
             <div id="countdown"></div>
         </section>
-        <section id="seccion4" class="section">
+        <section id="seccion4" class="section" data-scroll-spy>
             <h2>Resposive con JavaScript</h2>
             <div id="youtube"></div>
             <div id="gmaps"></div>
         </section>
-        <section id="seccion5" class="section">
+        <section id="seccion5" class="section" data-scroll-spy>
             <h2>Responsive Tester</h2>
             <form id="resposive-tester">
                 <input name="direccion" type="url" placeholder="URL" required>
@@ -79,22 +82,22 @@
 
             </form>
         </section>
-        <section id="seccion6" class="section">
+        <section id="seccion6" class="section" data-scroll-spy>
             <h2>Deteccion de Dispositivos<br>(User Agents)</h2>
             <div id="user-device"></div>
         </section>
-        <section id="seccion7" class="section">
+        <section id="seccion7" class="section" data-scroll-spy>
             <h2>Deteccion de Conexion</h2>
         </section>
-        <section id="seccion8" class="section">
+        <section id="seccion8" class="section" data-scroll-spy>
             <h2>Deteccion de la Camara Web</h2>
             <video src="" id="webcam"></video>
         </section>
-        <section id="seccion9" class="section">
+        <section id="seccion9" class="section" data-scroll-spy>
             <h2>Geolocalizacion</h2>
             <div id="geolocation"></div>
         </section>
-        <section id="seccion10" class="section">
+        <section id="seccion10" class="section" data-scroll-spy>
             <h2>Filtros de Busquedas</h2>
             <input type="search" placeholder="Buscar..." class="card-filter">
             <article class="cards">
@@ -124,25 +127,68 @@
                 </figure>
             </article>
         </section>
-        <section id="seccion11" class="section">
-            <h2>Seccion 11</h2>
+        <section id="seccion11" class="section" data-scroll-spy>
+            <h2>Sorteo Digital</h2>
+            <ul class="players">
+                <li class="player">JavaScript</li>
+                <li class="player">Pytkon</li>
+                <li class="player">Java</li>
+                <li class="player">Ruby</li>
+                <li class="player">C++</li>
+                <li class="player">Nodejs</li>
+                <li class="player">PHP</li>
+                <li class="player">Go</li>
+                <li class="player">Visual Basic</li>
+                <li class="player">perl</li>
+            </ul>
+            <div class="winner"></div><br>
+            <button id="winner-btn">Obtener Ganador </button>
         </section>
-        <section id="seccion12" class="section">
-            <h2>Seccion 12</h2>
-        </section>
-        <section id="seccion13" class="section">
-            <h2>Seccion 13</h2>
-        </section>
-        <section id="seccion14" class="section">
-            <h2>Seccion 14</h2>
-        </section>
-        <section id="seccion15" class="section">
-            <h2>Seccion 15</h2>
-        </section>
-    </main>
-    <buttom class="scroll-top-btn hidden">&#11014;</buttom>
-    <button class="dark-theme-btn">🌙</button>
-    <script src="index_dom.js" type="module"></script>
+        <section id="seccion12" class="section" data-scroll-spy>
+            <h2>Responsive Slider</h2>
+            <div class="slider">
+                <div class="slider-slides">
+                    <div class="slider-slide active">
+                        <img src="http://placeimg.com/400/400/animals" alt="animals">
+                    </div>
+                    <div class="slider-slide">
+                        <h4>Diapositiva 2</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eius maxime tenetur earum quisquam? Optio impedit totam distinctio ut unde nisi, veniam aliquam alias in. Est unde ab quas sint.</p>
+                    </div>
+                    <div class="slider-slide">
+                        <img src="http://placeimg.com/400/400/nture" alt="animals">
+                    </div>
+                    <div class="slider-slide">
+                        <h4>Diapositiva 4</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eius maxime tenetur earum quisquam? Optio impedit totam distinctio ut unde nisi, veniam aliquam alias in. Est unde ab quas sint.</p>
+                    </div>
+                </div>
+                <div class="slider-btns">
+                    <a class="prev" href="#">&laquo;</a>
+            <a class="next" href="#">&raquo;</a>
+            </div>
+            </div>
+
+            </section>
+            <section id="seccion13" class="section" data-scroll-spy>
+                <h2>Seccion 13</h2>
+            </section>
+            <section id="seccion14" class="section" data-scroll-spy>
+                <h2>Seccion 14</h2>
+            </section>
+            <section id="seccion16" class="section" data-scroll-spy>
+                <h2>Seccion 16</h2>
+            </section>
+            <section id="seccion17" class="section" data-scroll-spy>
+                <h2>Seccion 17</h2>
+            </section>
+            <section id="seccion18" class="section" data-scroll-spy>
+                <h2>Seccion 18</h2>
+            </section>
+            </main>
+            <buttom class="scroll-top-btn hidden">&#11014;</buttom>
+            <button class="dark-theme-btn">🌙</button>
+            <script src="index_dom.js" type="module"></script>
 
 
 
