agego modulo de video inteligente

--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -34,7 +34,7 @@
             <a href="#seccion10" data-scroll-spy>Filtros de Busquedas</a>
             <a href="#seccion11" data-scroll-spy>Sorteo Digital</a>
             <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
-            <a href="#seccion13" data-scroll-spy>Seccion 13</a>
+            <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
             <a href="#seccion14" data-scroll-spy>Seccion 14</a>
             <a href="#seccion15" data-scroll-spy>Seccion 15</a>
             <a href="#seccion16" data-scroll-spy>Seccion 16</a>
@@ -171,24 +171,52 @@
 
             </section>
             <section id="seccion13" class="section" data-scroll-spy>
-                <h2>Seccion 13</h2>
+                <h2>Video Inteligente</h2>
+                <video src="assets/LP  Lost On You Live.mp4" muted controls loop data-smart-video></video>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <video src="assets/LP  Lost On You Live.mp4" muted controls loop data-smart-video></video>
             </section>
             <section id="seccion14" class="section" data-scroll-spy>
-                <h2>Seccion 14</h2>
+                <h2>Formulario de Registro</h2>
+                <div class="form-registros">
+                    <input type="text" name="text" id="" class="form-registro" placeholder="Escribe tu Nombre Completo">
+                    <input type="email" name="email" id="" class="form-registro" placeholder=" Escribe tu Email ">
+                    <input type="text " name="text " id="" class="form-registro" placeholder="Asusnto a Tratar">
+                    <input type="text" name="text" id="" class="form-registro cometarios" placeholder=" Escribe tus Comentarios ">
+                </div>
             </section>
-            <section id="seccion16" class="section" data-scroll-spy>
+            <section id="seccion16 " class="section " data-scroll-spy>
                 <h2>Seccion 16</h2>
             </section>
-            <section id="seccion17" class="section" data-scroll-spy>
+            <section id="seccion17 " class="section " data-scroll-spy>
                 <h2>Seccion 17</h2>
             </section>
-            <section id="seccion18" class="section" data-scroll-spy>
+            <section id="seccion18 " class="section " data-scroll-spy>
                 <h2>Seccion 18</h2>
             </section>
             </main>
-            <buttom class="scroll-top-btn hidden">&#11014;</buttom>
-            <button class="dark-theme-btn">🌙</button>
-            <script src="index_dom.js" type="module"></script>
+            <buttom class="scroll-top-btn hidden ">&#11014;</buttom>
+            <button class="dark-theme-btn ">🌙</button>
+            <script src="index_dom.js " type="module "></script>
 
 
 
