agrego modulo narrador de texto

--- a/Ejercicios del Dom.html
+++ b/Ejercicios del Dom.html
@@ -37,10 +37,7 @@
             <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
             <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
             <a href="#seccion14" data-scroll-spy>Validacion de formularios</a>
-            <a href="#seccion15" data-scroll-spy>Seccion 15</a>
-            <a href="#seccion16" data-scroll-spy>Seccion 16</a>
-            <a href="#seccion17" data-scroll-spy>Seccion 17</a>
-            <a href="#seccion18" data-scroll-spy>Seccion 18</a
+            <a href="#seccion15" data-scroll-spy>Narrador</a>         
         </nav>
     </aside>
     <main>
@@ -171,57 +168,59 @@
             </div>
 
             </section>
-            <section id="seccion13" class="section" data-scroll-spy>
-                <h2>Video Inteligente</h2>
-                <video src="assets/LP  Lost On You Live.mp4" muted controls loop data-smart-video></video>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <video src="assets/LP  Lost On You Live.mp4" muted controls loop data-smart-video></video>
-            </section>
-            <section id="seccion14" class="section" data-scroll-spy>
-                <h2>Validacion de formularios</h2>
-                <form class="contact-form" action="https://formsubmit.co/yurelvy@gmail.com" method="POST" target="_blank">
-                    <legend>Envianos tus Comentarios</legend>
-                    <input type="text" name="name" placeholder="Escribe tu Nombre" title="Nombre solo acepta letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
-                    <input type="email" name="email" placeholder="Escribe tu Email" title="Email Incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
-                    <input type="text" name="subject" placeholder="Asunto a tratar" title="El Asunto es Requerido" required>
-                    <textarea name="comments" cols="50" rows="5" placeholder="Escribes tus comentarios" data-pattern="^.{1,255}$" title="Tu comentario no debe exceder los 255 caracteres" required></textarea>
-                    <input type="submit" value="Enviar">
-                    <div class="contact-form-loader none">
-                        <img src="assets/rin.svg" alt="Cargando">
-                    </div>
-                    <div class="contact-form-response none">
-                        <p>Los Datos han Sido Enviados con Exito</p>
-                    </div>
-                </form>                
-            </section>
-            <section id="seccion16 " class="section " data-scroll-spy>
-                <h2>Seccion 16</h2>
-            </section>
-            <section id="seccion17 " class="section " data-scroll-spy>
-                <h2>Seccion 17</h2>
-            </section>
-            <section id="seccion18 " class="section " data-scroll-spy>
-                <h2>Seccion 18</h2>
-            </section>
+        <section id="seccion13" class="section" data-scroll-spy>
+            <h2>Video Inteligente</h2>
+            <video src="assets/LP  Lost On You Live.mp4" muted controls loop data-smart-video></video>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <video src="assets/LP  Lost On You Live.mp4" muted controls loop data-smart-video></video>
+        </section>        
+        <section id="seccion14" class="section" data-scroll-spy>
+            <h2>Validacion de formularios</h2>
+            <form class="contact-form" action="https://formsubmit.co/yurelvy@gmail.com" method="POST" target="_blank">
+                <legend>Envianos tus Comentarios</legend>
+                <input type="text" name="name" placeholder="Escribe tu Nombre" title="Nombre solo acepta letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
+                <input type="email" name="email" placeholder="Escribe tu Email" title="Email Incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
+                <input type="text" name="subject" placeholder="Asunto a tratar" title="El Asunto es Requerido" required>
+                <textarea name="comments" cols="50" rows="5" placeholder="Escribes tus comentarios" data-pattern="^.{1,255}$" title="Tu comentario no debe exceder los 255 caracteres" required></textarea>
+                <input type="submit" value="Enviar">
+                <div class="contact-form-loader none">
+                    <img src="assets/rin.svg" alt="Cargando">
+                </div>
+                <div class="contact-form-response none">
+                    <p>Los Datos han Sido Enviados con Exito</p>
+                </div>
+            </form>                
+        </section>
+        <section id="seccion15" class="section" data-scroll-spy>
+            <h2>Narrador</h2>
+            <select id="speech-select">
+                <option value="">--- Elije una Voz ---</option>
+            </select>
+            <br><br>
+            <textarea  id="speech-text" cols="50" rows="5" placeholder="Ingresa texto para leerlo"></textarea>
+            <br><br>
+            <button id="speech-btn">Leer texto</button>
+        </section>
+                  
             </main>
             <buttom class="scroll-top-btn hidden ">&#11014;</buttom>
             <button class="dark-theme-btn ">🌙</button>
